k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xiyouji
spec:
  type: ClusterIP
  selector:
    app: xiyouji
  ports:
    - name: http
      port: 80
      targetPort: http
